fix(form): prevent children from stretching out of the form

--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -12,6 +12,10 @@
 
 @include lime-typography.core-styles;
 
+.form-group {
+    min-width: 0;
+}
+
 .limel-form-array-item--simple {
     display: flex;
     align-items: center;
